--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "karma-jasmine-ajax-eisoo",
-  "version": "0.2.1",
-  "description": "Use Pivotal jasmine-ajax with Karma",
+  "name": "karma-jasmine-ajax-strudel",
+  "version": "0.0.1",
+  "description": "Use recent versions of Pivotal's jasmine-ajax with Karma",
   "main": "main.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bornkiller/karma-jasmine-ajax-eisoo.git"
+    "url": "git://github.com/bornkiller/karma-jasmine-ajax-strudel.git"
   },
   "keywords": [
     "karma-plugin",
@@ -13,12 +13,12 @@
     "jasmine-ajax"
   ],
   "dependencies": {
-    "jasmine-ajax": "^2.0.1"
+    "jasmine-ajax": "^2.99.0"
   },
   "peerDependencies": {
     "karma": "~0.12.0"
   },
   "license": "MIT",
   "bugs": {},
-  "homepage": "https://github.com/bornkiller/karma-jasmine-ajax-eisoo"
+  "homepage": "https://github.com/bornkiller/karma-jasmine-ajax-strudel"
 }
